# WebScrap

./: main.py  pyproject.toml
