[tool.poetry]
name = "webscrap"
version = "0.1.0"
description = ""
authors = ["macp0411@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pandas = "^1.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
